Fixed reply markup button overflow

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -2307,6 +2307,8 @@ a.im_message_fwd_photo {
   font-size: 13px;
   margin: 0;
   padding: 6px 6px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   .reply_markup_h1 & {
     height: 170px;
